[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/ui/hud/HUD.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/ui/HeartUIFull.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/ui/HeartUIEmpty.png" type="Texture" id=3]
[ext_resource path="res://resources/main_theme.tres" type="Theme" id=4]
[ext_resource path="res://assets/fonts/montserrat_6.tres" type="DynamicFont" id=5]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.831373, 0.6, 0.27451, 0.658824 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color( 0, 0, 0, 0.14902 )
shadow_offset = Vector2( 0.5, 0.5 )
anti_aliasing = false

[node name="HUD" type="CanvasLayer" groups=[
"HUD",
]]
script = ExtResource( 1 )

[node name="PlayerList" type="Control" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 128.0
margin_bottom = 176.0

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerList"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LocalPlayerName" type="Label" parent="PlayerList/VBoxContainer"]
margin_right = 128.0
margin_bottom = 14.0
text = "Local Player"

[node name="RemotePlayerList" type="VBoxContainer" parent="PlayerList/VBoxContainer"]
margin_top = 18.0
margin_right = 128.0
margin_bottom = 176.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PlayerList/VBoxContainer/RemotePlayerList"]
margin_right = 128.0
margin_bottom = 14.0
text = "Remote"

[node name="HealthDisplay" type="Control" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -88.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeartEmpty" type="TextureRect" parent="HealthDisplay"]
margin_right = 60.0
margin_bottom = 11.0
texture = ExtResource( 3 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeartFull" type="TextureRect" parent="HealthDisplay"]
margin_right = 15.0
margin_bottom = 11.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hint" type="Label" parent="."]
margin_left = 63.0
margin_top = 98.0
margin_right = 120.0
margin_bottom = 120.0
rect_clip_content = true
theme = ExtResource( 4 )
custom_styles/normal = SubResource( 1 )
custom_fonts/font = ExtResource( 5 )
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}
